# doorbell_demo

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  remark.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32p4_eye  sdkconfig.defaults.esp32s3  sdkconfig.old  命令行.bat  日志.txt
.claude/: settings.local.json
audio_server/: pom.xml  test_webrtc.py  开发实现.md
common/: CMakeLists.txt  Kconfig  idf_component.yml  media_sys.h  network.c  network.h  patch_idf.pl  sys_state.c  sys_state.h
components/av_render/: CMakeLists.txt  README.md
components/av_render/examples/render_test/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32p4
components/av_render/examples/render_test/main/: idf_component.yml  settings.h
components/av_render/include/: audio_decoder.h  audio_render.h  audio_resample.h  av_render_default.h  av_render_types.h  video_render.h
components/av_render/render_impl/: i2s_render.c  lcd_render.c
components/av_render/src/: audio_decoder.c  audio_resample.c  av_render.c  color_convert.c  color_convert.h  video_decoder.c  video_render.c
components/esp_webrtc/: CMakeLists.txt  README.md
components/esp_webrtc/impl/apprtc_signal/: CMakeLists.txt  https_client.c  https_client.h  https_client_utils.h  signal_default.c
components/esp_webrtc/impl/whip_signal/include/: esp_peer_whip_signaling.h
components/esp_webrtc/include/: esp_webrtc.h  esp_webrtc_defaults.h  esp_webrtc_version.h
components/esp_webrtc/src/: esp_peer_signaling.c  esp_webrtc.c  esp_webrtc_version.c
main/: board.c  (+38 more)
(+89 files in other folders)
